--- a/package.json
+++ b/package.json
@@ -1,25 +1,48 @@
 {
-  "name": "next-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  }
+    "name": "next-web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "ex": "next build && next export",
+        "start": "next start",
+        "lint": "next lint",
+        "deploy": "gh-pages -d out -r git@github.com:shaijing/shaijing.github.io.git",
+        "posti": "prisma generate --schema=./db/schema.prisma"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/node": "20.4.5",
+        "@types/react": "18.2.17",
+        "@types/react-dom": "18.2.7",
+        "autoprefixer": "10.4.14",
+        "contentlayer": "^0.3.4",
+        "date-fns": "^2.30.0",
+        "eslint": "8.46.0",
+        "eslint-config-next": "13.4.12",
+        "gh-pages": "^5.0.0",
+        "gray-matter": "^4.0.3",
+        "next": "13.4.12",
+        "next-contentlayer": "^0.3.4",
+        "next-themes": "^0.2.1",
+        "postcss": "8.4.27",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.10.1",
+        "reading-time": "^1.5.0",
+        "rehype-autolink-headings": "^6.1.1",
+        "rehype-code-titles": "^1.2.0",
+        "rehype-mathjax": "^4.0.3",
+        "rehype-pretty-code": "^0.10.0",
+        "rehype-prism-plus": "^1.6.1",
+        "rehype-slug": "^5.1.0",
+        "remark": "^14.0.3",
+        "remark-gfm": "^3.0.1",
+        "remark-html": "^15.0.2",
+        "remark-math": "^5.1.1",
+        "tailwindcss": "3.3.3",
+        "typescript": "5.1.6"
+    }
 }
